testcase for `tryCollectLinesMatchingIssueDetails`